[package]
name = "k8s-svc-hostfile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.88.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.0", features = ["latest"] }
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4.21"
env_logger = "0.11.3"
